5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1594_1800.log
== TEST (2019-03-28 16:17:23) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
f=(a**2+b**2+c**)\(a+b+c)
print(round(f, 7))

-- ERROR:
File "XXXX", line 4
    f=(a**2+b**2+c**)\(a+b+c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:17:48) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
f=(a**2+b**2+c**\a+b+c)
print(round(f, 7))

-- ERROR:
File "XXXX", line 4
    f=(a**2+b**2+c**\a+b+c)
                          ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:18:16) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
f=(a**2+b**2+c**/a+b+c)
print(round(f, 7))

-- ERROR:
File "XXXX", line 4
    f=(a**2+b**2+c**/a+b+c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:18:41) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
f=(a**2+b**2+c**/a+b+c)
print(round(f, 7))

-- ERROR:
File "XXXX", line 4
    f=(a**2+b**2+c**/a+b+c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:19:58) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
f=(a**2+b**2+c**)/(a+b+c)
print(round(f, 7))

-- ERROR:
File "XXXX", line 4
    f=(a**2+b**2+c**)/(a+b+c)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:22:48) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(round(a**2+b**2+c**/a+b+c))


-- ERROR:
File "XXXX", line 4
    print(round(a**2+b**2+c**/a+b+c))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:23:27) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(round(a**2+b**2+c**/a+b+c, 7))


-- ERROR:
File "XXXX", line 4
    print(round(a**2+b**2+c**/a+b+c, 7))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:23:54) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(round(1**2+b**2+c**/a+b+c, 7))


-- ERROR:
File "XXXX", line 4
    print(round(1**2+b**2+c**/a+b+c, 7))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:24:43) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(round(a**2 + b**2 + c** / a+b+c, 7))


-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c** / a+b+c, 7))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:30:00) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(round(a**2 + b**2 + c** / a+b+c, 7))


-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c** / a+b+c, 7))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 18:30:46) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(float(round(a**2 + b**2 + c** / a+b+c, 7)))


-- ERROR:
File "XXXX", line 4
    print(float(round(a**2 + b**2 + c** / a+b+c, 7)))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:12:21) 
-- CODE:
a=float(input("Variavel1: "))
b=float(input("Variavel2: "))
c=float(input("Variavel3: "))
print(float(round(a**2 + b**2 + c** / a+b+c, 7)))


-- ERROR:
File "XXXX", line 4
    print(float(round(a**2 + b**2 + c** / a+b+c, 7)))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:20:26) 
-- CODE:
a=float(input("variave1: "))
b=float(input("variave2: "))
c=float(input("variave3: "))
print(float(round(a**2 + b**2 + c** / a+b+c, 7)))


-- ERROR:
File "XXXX", line 4
    print(float(round(a**2 + b**2 + c** / a+b+c, 7)))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:21:27) 
-- CODE:
a=float(input("variave1: "))
b=float(input("variave2: "))
c=float(input("variave3: "))
print(round(a**2 + b**2 + c** / a+b+c, 7))


-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c** / a+b+c, 7))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:27:53) 
-- CODE:
a=float(input("variave1: "))
b=float(input("variave2: "))
c=float(input("variave3: "))
d=(a**2 + b**2 + c** / a+b+c)
print(round(d, 7))



-- ERROR:
File "XXXX", line 4
    d=(a**2 + b**2 + c** / a+b+c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:28:11) 
-- CODE:
a=float(input("variave1: "))
b=float(input("variave2: "))
c=float(input("variave3: "))
d=float(a**2 + b**2 + c** / a+b+c)
print(round(d, 7))



-- ERROR:
File "XXXX", line 4
    d=float(a**2 + b**2 + c** / a+b+c)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 09:37:38) 
-- CODE:
a=float(input("variavel1: "))
b=float(input("variavel2: "))
c=float(input("variavel3: "))
d=(a**2 + b**2 + c** / a+b+c)
print(round(d, 7))



-- ERROR:
File "XXXX", line 4
    d=(a**2 + b**2 + c** / a+b+c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:42:46) 
-- CODE:
a=float(input("variavel1: "))
b=float(input("variavel2: "))
c=float(input("variavel3: "))
d=(a**2 + b**2 + c** / a+b+c)
print(round(d, 7))



-- ERROR:
File "XXXX", line 4
    d=(a**2 + b**2 + c** / a+b+c)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
